return error if token is expired
