# docs/web_deploy/openapi.json
@@ -429,6 +429,48 @@
           }
         }
       },
+      "ExpiredTokenError": {
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/ExpiredTokenKey"
+          },
+          {
+            "type": "object",
+            "required": [
+              "attributes"
+            ],
+            "properties": {
+              "attributes": {
+                "type": "object",
+                "required": [
+                  "error"
+                ],
+                "properties": {
+                  "error": {
+                    "type": "boolean",
+                    "example": false
+                  }
+                }
+              }
+            }
+          }
+        ]
+      },
+      "ExpiredTokenKey": {
+        "type": "object",
+        "required": [
+          "type",
+          "id"
+        ],
+        "properties": {
+          "type": {
+            "type": "string",
+            "enum": [
+              "expired_token"
+            ]
+          }
+        }
+      },
       "IpfsFile": {
         "allOf": [
           {
